--- a/main/res/layout/content_main.xml
+++ b/main/res/layout/content_main.xml
@@ -10,114 +10,159 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.braintrainer.nj.braintrainer.MainActivity"
-    tools:showIn="@layout/activity_main">
+    android:id="@+id/launchRelativeLayout">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go"
+        android:text="Go..."
+        android:textSize="35dp"
         android:id="@+id/startButton"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:onClick="start"
-        android:visibility="invisible" />
+        android:visibility="visible"
+        android:backgroundTint="#7b839b"
+        android:padding="20dp"
+        android:backgroundTintMode="multiply" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="30s"
-        android:id="@+id/timertextView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:textSize="30sp" />
+        android:text="Last Score"
+        android:id="@+id/LastScoreTextView"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="134dp"
+        android:textStyle="bold|italic"
+        android:typeface="sans"
+        android:textSize="25sp"
+        android:visibility="invisible"
+        android:padding="12dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="0/0"
-        android:id="@+id/scoreTextView"
-        android:layout_alignBottom="@+id/timertextView"
-        android:layout_alignParentEnd="true"
-        android:textSize="30sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="3+5"
-        android:id="@+id/sumTextView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="30sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Result"
-        android:id="@+id/resultTextView"
-        android:textSize="30sp"
-        android:layout_below="@+id/startButton"
-        android:layout_alignEnd="@+id/startButton" />
-
-    <GridLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@+id/resultTextView"
-        android:layout_below="@+id/timertextView"
-        android:padding="5dp"
-        android:layout_alignParentStart="false">
+        android:id="@+id/gameRelativeLayout"
+        android:visibility="invisible">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="30s"
+            android:id="@+id/timertextView"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="0/0"
+            android:id="@+id/scoreTextView"
+            android:textSize="30sp"
+            android:layout_marginStart="40dp"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/playAgainButton" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="3+5"
+            android:id="@+id/sumTextView"
+            android:layout_alignParentTop="true"
+            android:textSize="30sp"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentLeft="false"
+            android:layout_centerHorizontal="true"
+            android:background="#d1c6c1"
+            android:paddingLeft="15dp"
+            android:paddingRight="12dp" />
+
+
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dp"
+            android:layout_alignParentStart="false"
+            android:layout_below="@+id/timertextView">
+
+            <Button
+                android:layout_width="174dp"
+                android:layout_height="118dp"
+                android:text="2"
+                android:id="@+id/answerButton0"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:tag="0"
+                android:textSize="35sp"
+                android:onClick="chooseAnswer"
+                android:backgroundTint="#56b792" />
+
+            <Button
+                android:layout_width="174dp"
+                android:layout_height="118dp"
+                android:text="3"
+                android:id="@+id/answerButton1"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:tag="1"
+                android:textSize="35sp"
+                android:onClick="chooseAnswer"
+                android:backgroundTint="#b46644" />
+
+            <Button
+                android:layout_width="174dp"
+                android:layout_height="118dp"
+                android:text="4"
+                android:id="@+id/answerButton2"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:tag="2"
+                android:textSize="35sp"
+                android:onClick="chooseAnswer"
+                android:backgroundTint="#cf6c6c" />
+
+            <Button
+                android:layout_width="174dp"
+                android:layout_height="118dp"
+                android:text="5"
+                android:id="@+id/answerButton3"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:tag="3"
+                android:textSize="35sp"
+                android:onClick="chooseAnswer"
+                android:backgroundTint="#5f66b1" />
+
+
+        </GridLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Result"
+            android:id="@+id/resultTextView"
+            android:textSize="30sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="338dp" />
 
         <Button
-            android:layout_width="174dp"
-            android:layout_height="118dp"
-            android:text="2"
-            android:id="@+id/answerButton0"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:tag="0"
-            android:textSize="30sp"
-            android:onClick="chooseAnswer"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Play again"
+            android:id="@+id/playAgainButton"
+            android:layout_marginTop="438dp"
+            android:onClick="playAgain"
+            android:visibility="invisible"
+            android:textColorHighlight="#ad989a"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
 
-        <Button
-            android:layout_width="174dp"
-            android:layout_height="118dp"
-            android:text="3"
-            android:id="@+id/answerButton1"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:tag="1"
-            android:textSize="30sp"
-            android:onClick="chooseAnswer"
-            />
-
-        <Button
-            android:layout_width="174dp"
-            android:layout_height="118dp"
-            android:text="4"
-            android:id="@+id/answerButton2"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:tag="2"
-            android:textSize="30sp"
-            android:onClick="chooseAnswer"
-            />
-
-        <Button
-            android:layout_width="174dp"
-            android:layout_height="118dp"
-            android:text="5"
-            android:id="@+id/answerButton3"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:tag="3"
-            android:textSize="30sp"
-            android:onClick="chooseAnswer" />
-
-
-    </GridLayout>
 </RelativeLayout>
